Improve labels of inflections.